--- a/templates/graphique.html
+++ b/templates/graphique.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Graphique</title>
+    <title>Metrique</title>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
+
 <body>
     <h2>Mon Graphique</h2>
+    <div id="chart_div"></div>
+    <script>
+        google.charts.load('current', { packages: ['corechart'] });
+        google.charts.setOnLoadCallback(drawBackgroundColor);
+        function drawBackgroundColor() {
+            function drawChart(data) {
+                // Convertir les données récupérées en un tableau utilisable par Google Charts
+                var dataTable = new google.visualization.DataTable();
+                dataTable.addColumn('string', 'Date');
+                dataTable.addColumn('number', 'Valeur');
+                data.results.forEach(entry => {
+                    var date = new Date(entry.Jour * 1000);
+                    dataTable.addRow([date.toLocaleDateString(), entry.temp]);
+                });
+                // Configurer les options du graphique en ligne
+                var options = {
+                    title: 'Évolution des températures de la ville de Tawarano',
+                    curveType: 'function',
+                    legend: { position: 'bottom' }
+                };
+                var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
+                chart.draw(dataTable, options);
+            }
+            // Récupération de données depuis notre API /tawarano/
+            fetch('/tawarano/')
+                .then(response => response.json())
+                .then(data => {
+                    drawChart(data);
+                })
+        }
+    </script>
 </body>
+
 </html>
