--- a/templates/histogramme.html
+++ b/templates/histogramme.html
@@ -12,46 +12,48 @@
     <div id="chart_div" style="width: 900px; height: 500px;"></div>
     <script type="text/javascript">
         google.charts.load("current", { packages: ["corechart"] });
-        google.charts.setOnLoadCallback(drawChart);
-        function drawChart() {
-            var data = google.visualization.arrayToDataTable([
-                ['Dinosaur', 'Length'],
-                ['Acrocanthosaurus (top-spined lizard)', 12.2],
-                ['Albertosaurus (Alberta lizard)', 9.1],
-                ['Allosaurus (other lizard)', 12.2],
-                ['Apatosaurus (deceptive lizard)', 22.9],
-                ['Archaeopteryx (ancient wing)', 0.9],
-                ['Argentinosaurus (Argentina lizard)', 36.6],
-                ['Baryonyx (heavy claws)', 9.1],
-                ['Brachiosaurus (arm lizard)', 30.5],
-                ['Ceratosaurus (horned lizard)', 6.1],
-                ['Coelophysis (hollow form)', 2.7],
-                ['Compsognathus (elegant jaw)', 0.9],
-                ['Deinonychus (terrible claw)', 2.7],
-                ['Diplodocus (double beam)', 27.1],
-                ['Dromicelomimus (emu mimic)', 3.4],
-                ['Gallimimus (fowl mimic)', 5.5],
-                ['Mamenchisaurus (Mamenchi lizard)', 21.0],
-                ['Megalosaurus (big lizard)', 7.9],
-                ['Microvenator (small hunter)', 1.2],
-                ['Ornithomimus (bird mimic)', 4.6],
-                ['Oviraptor (egg robber)', 1.5],
-                ['Plateosaurus (flat lizard)', 7.9],
-                ['Sauronithoides (narrow-clawed lizard)', 2.0],
-                ['Seismosaurus (tremor lizard)', 45.7],
-                ['Spinosaurus (spiny lizard)', 12.2],
-                ['Supersaurus (super lizard)', 30.5],
-                ['Tyrannosaurus (tyrant lizard)', 15.2],
-                ['Ultrasaurus (ultra lizard)', 30.5],
-                ['Velociraptor (swift robber)', 1.8]]);
+        google.charts.setOnLoadCallback(drawBackgroundColor)
+        function drawBackgroundColor() {
+            function drawChart(data) {
+                // console.log(data.results)
 
-            var options = {
-                title: 'Lengths of dinosaurs, in meters',
-                legend: { position: 'none' },
-            };
+                // Convertir les données récupérées en un tableau utilisable par Google Charts
+                // dataTable.addColumn('number', 'Temperature');
+                // dataTable.addColumn('string', 'Jour');
 
-            var chart = new google.visualization.Histogram(document.getElementById('chart_div'));
-            chart.draw(data, options);
+                let array = [["Température","jour"]]
+                for (i = 0; i < data.results.length; i++) {
+                    var date = new Date(data.results[i].Jour * 1000);
+                    array.push([ data.results[i].temp,date.toLocaleDateString()])
+                }
+
+                var dataTable = new google.visualization.arrayToDataTable(array);
+
+
+                var options = {
+                    title: 'Histogramme de Tawarano',
+                    legend: { position: 'none' },
+                    hAxis: {
+                        title: 'Température', // Titre de l'axe horizontal
+                        minValue: 8,      // Valeur minimale
+                        maxValue: 10      // Valeur maximale (ajustez selon vos données)
+                    },
+                    vAxis: {
+                        title: 'Nombre de jours',  // Titre de l'axe vertical
+                        minValue: 0,       // Valeur minimale
+                        maxValue: 11       // Valeur maximale (ajustez selon vos données)
+                    }
+                };
+
+                var chart = new google.visualization.Histogram(document.getElementById('chart_div'));
+                chart.draw(dataTable, options);
+            }
+            // Récupération de données depuis notre API /tawarano/
+            fetch('/tawarano/')
+                .then(response => response.json())
+                .then(data => {
+                    drawChart(data);
+                })
         }
     </script>
 </body>
